fix undesirable horizontal scrolling and overflow

--- a/src/App.css
+++ b/src/App.css
@@ -103,10 +103,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: 0 auto;
 }
 
 .content {
-  min-width: 100vw;
+  width: 100%;
   flex-grow: 1;
   display: flex;
   flex-direction: column;
@@ -115,7 +116,7 @@
 }
 
 .App-footer {
-  min-width: 100vw;
+  min-width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -125,7 +126,8 @@
 }
 
 p {
-  padding: 0px 20px;
+  padding: 20px;
+  margin: 0px;
 }
 
 .ReactModal__Overlay {
